Big commit, editting data complete, dates array in jsonfile now used, json data format changed

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -7,7 +7,7 @@
 <body>
 
 <div class="container">
-  <a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}"><img class="img-responsive" src="/img/back.PNG"></a>
+  <a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}"><img class="img-responsive" src="/img/back.PNG"></a>
 </div>
 
 <div class="container">
@@ -21,6 +21,7 @@
       <input name="activity" value="{{defaultActivity}}" style="display:none;">
       <input name="category" value="{{defaultCategory}}" style="display:none;">
       <input name="data" value="{{defaultArray}}" style="display:none;">
+      <input name="dates" value="{{labelArray}}" style="display:none;">
 
       <div class="container">
         <label for="cat"><b>Category:</b></label>
