--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -53,7 +53,7 @@
 	                	<ul class="dropdown-menu" role="menu">
 		                	{{#each activities}}
 		                  	<!-- Change this later to list all activities for a specific user using jquery-->
-		                    	<li><a class="activity" href="/main/{{../../name}}/{{../categoryName}}/{{activityName}}/[]">{{activityName}}</a></li>
+		                    	<li><a class="activity" href="/main/{{../../name}}/{{../categoryName}}/{{activityName}}/[]/[]">{{activityName}}</a></li>
 		                    {{/each}}
 		                    <!-- <li class="addActivity"><a class="activity" href="#">Add an activity!</a></li> -->
 	                  	</ul>
@@ -152,6 +152,7 @@
 			</div>
 		</div>
 		<a id="array" style="display:none;">{{dataArray}}</a>
+		<a id="labelArray" style="display:none;">{{labelArray}}</a>
 
 		<script src="/javascript/bootstrap.js"></script>
 </body>
