--- a/views/motivate.handlebars
+++ b/views/motivate.handlebars
@@ -14,7 +14,7 @@
 </div>
         <div class="container">
           <h2>Hi, {{name}}!</h2>
-          <button><a href='./main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{dataArray}}'>Let's start your workout!</a></button>
+          <button><a href='./main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{dataArray}}/{{labelArray}}'>Let's start your workout!</a></button>
         </div>
 </body>
     <script src="https://code.jquery.com/jquery.js"></script>
