--- a/views/deleteActivity.handlebars
+++ b/views/deleteActivity.handlebars
@@ -12,40 +12,29 @@
 
 <div class="container">
 
-    <h1 class="jumbotron" style="text-align: center; font-family: 'Rubik', sans-serif;"">New Exercise</h1>
+    <h1 style="text-align: center; font-family: 'Rubik', sans-serif;"">Delete Activity</h1>
 
   <!--   <form action="addActivity/{{uname}}/"> -->
-    <form action="/addActivity/">
+<!--     <form action="/addActivity/"> -->
 
-      <input name="myName" value="{{name}}" style="display:none;">
+<!--       <input name="myName" value="{{name}}" style="display:none;">
       <input name="activity" value="{{defaultActivity}}" style="display:none;">
       <input name="category" value="{{defaultCategory}}" style="display:none;">
       <input name="data" value="{{defaultArray}}" style="display:none;">
-      <input name="dates" value="{{labelArray}}" style="display:none;">
-
-      <div class="container">
-        <label for="cat"><b>Category:</b></label>
-        <select name="categ" class="selectpicker" data-width="100%" id="cat">
-          <option value="Chest">Chest</option>
-          <option value="Shoulders">Shoulders</option>
-          <option value="Triceps">Triceps</option>
-          <option value="Back">Back</option>
-          <option value="Biceps">Biceps</option>
-          <option value="Cardio">Cardio</option>
-          <option value="Other">Other</option>
-        </select>
-      </div>
+      <input name="dates" value="{{labelArray}}" style="display:none;"> -->
 
       <br>
 
-      <div class="container form-group">
+<!--       <div class="container form-group">
         <label for="act"><b>Activity:</b></label>
         <input type="text" class="form-control" placeholder="Enter Activity Name" name="actName" id="act" required>
-      </div>
+      </div> -->
+      <p>Are you sure you want to delete this activity?</p>
 
-      <button type="submit" id="createdActivity" style="margin-left: 15px;" class="btn btn-success btn-lrg">Create New Activity</button>
-      
-    </form>
+      <div class="container">
+        <button type="button" style="margin-left: 15px;" class="btn btn-danger btn-lrg"><a href="#">Delete</a></button>
+      </div>
+<!--     </form> -->
 
 </div>
 
