--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -47,6 +47,7 @@
         <div class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
                 <li class="dropdown">
+                	<li><a class="activity" href="/activity/{{name}}">Add Exercise</a></li>
                     {{#each categorie}}
                 	<li>
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{categoryName}}<b class="caret"></b></a>
@@ -59,7 +60,7 @@
 	                  	</ul>
                 	</li>
                 	{{/each}}
-                	<li><a class="activity" href="/activity/{{name}}">Add an activity!</a></li>
+                	<li><a href="/deleteActivity">Delete Exercise</a></li>
                 	<li><a href="/">Log Out</a></li>
                 </li>
            </ul>
@@ -121,15 +122,15 @@
 
 					<form action="/editData/">
 
-					<div class="input-group">
+						<div class="input-group">
 
-						<input name="myName" value="{{name}}" style="display:none;">
-						<input name="activity" value="{{defaultActivity}}" style="display:none;">
-						<input name="category" value="{{defaultCategory}}" style="display:none;">
-						<input name="categories" value="{{categorie}}" style="display:none;">
+							<input name="myName" value="{{name}}" style="display:none;">
+							<input name="activity" value="{{defaultActivity}}" style="display:none;">
+							<input name="category" value="{{defaultCategory}}" style="display:none;">
+							<input name="categories" value="{{categorie}}" style="display:none;">
 
 
-					</div>
+						</div>
 					<div style="height: 170px; overflow: auto;">
 						
 										
@@ -148,6 +149,21 @@
 						</table>
 						</div>
 					</form>	
+
+
+						<div class="input-group" style="margin-top: 15px;">
+
+<!-- 							<input name="myName" value="{{name}}" style="display:none;">
+							<input name="activity" value="{{defaultActivity}}" style="display:none;">
+							<input name="category" value="{{defaultCategory}}" style="display:none;">
+							<input name="categories" value="{{categorie}}" style="display:none;">
+ -->
+						  	<span>
+						    	<button style="font-family: 'Rubik', sans-serif;" type="button" class="btn btn-danger"><a href="/deleteActivity/{{name}}/{{defaultCategory}}/{{defaultActivity}}">Delete Activity</a></button>
+						  	</span>
+						</div>
+
+
 				</div>
 			</div>
 		</div>
