--- a/views/deleteActivity.handlebars
+++ b/views/deleteActivity.handlebars
@@ -32,7 +32,7 @@
       <p>Are you sure you want to delete this activity?</p>
 
       <div class="container">
-        <button type="button" style="margin-left: 15px;" class="btn btn-danger btn-lrg"><a href="#">Delete</a></button>
+        <button type="button" style="margin-left: 15px;" class="btn btn-danger btn-lrg"><a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}">Delete</a></button>
       </div>
 <!--     </form> -->
 
