--- a/public/css/style.css
+++ b/public/css/style.css
@@ -307,3 +307,37 @@ footer.second{
   float: left;
   border-bottom-width: 0;
 }
+
+/*--------------------------------------------------------------------------------------------------------*/
+
+/* Styling for help page */
+    .faqHeader {
+        font-size: 20px;
+        margin: 20px;
+    }
+
+/*    .panel-heading [data-toggle="collapse"]:after {
+        font-family: 'Glyphicons Halflings';
+
+        float: right;
+        color: #F58723;
+        font-size: 18px;
+        line-height: 22px;
+
+        -webkit-transform: rotate(-90deg);
+        -moz-transform: rotate(-90deg);
+        -ms-transform: rotate(-90deg);
+        -o-transform: rotate(-90deg);
+        transform: rotate(-90deg);
+    }
+
+    .panel-heading [data-toggle="collapse"].collapsed:after {
+
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        -o-transform: rotate(90deg);
+        transform: rotate(90deg);
+        color: #454444;
+    }*/
+/*--------------------------------------------------------------------------------------------------------*/
