--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -4,15 +4,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <body>
 
-<div class="container">
-  <a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}"><img class="img-responsive" src="/img/back.PNG"></a>
+<!-- <div class="container" style="margin-top: 15px;">
+  <a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}"></a>
+</div> -->
+
+<div class="container" style="margin-top: 15px;">
+      <a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}"><span class="glyphicon glyphicon-chevron-left"></span></a>
 </div>
 
 <div class="container">
 
-    <h1 class="jumbotron" style="text-align: center; font-family: 'Rubik', sans-serif;"">New Exercise</h1>
+    <h1 class="jumbotron" style="text-align: center; font-family: 'Rubik', sans-serif; font-size: 40px;"><strong>New Exercise</strong></h1>
 
   <!--   <form action="addActivity/{{uname}}/"> -->
     <form action="/addActivity/">
@@ -39,11 +46,13 @@
       <br>
 
       <div class="container form-group">
+
         <label for="act"><b>Activity:</b></label>
-        <input type="text" class="form-control" placeholder="Enter Activity Name" name="actName" id="act" required>
+        <input type="text" class="form-control" placeholder="Enter Exercise Name" name="actName" id="act" required>
+
       </div>
 
-      <button type="submit" id="createdActivity" style="margin-left: 15px;" class="btn btn-success btn-lrg">Create New Activity</button>
+      <button type="submit" id="createdActivity" style="margin-left: 15px;" class="btn btn-success btn-lrg">Create New Exercise</button>
       
     </form>
 
