--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -47,7 +47,7 @@
         <div class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
                 <li class="dropdown">
-                	<li><a class="activity" href="/activity/{{name}}">Add Exercise</a></li>
+                	<li><a class="activity" href="/activity/{{name}}"><strong>Add an Exercise</strong></a></li>
                     {{#each categorie}}
                 	<li>
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{categoryName}}<b class="caret"></b></a>
@@ -60,7 +60,7 @@
 	                  	</ul>
                 	</li>
                 	{{/each}}
-                	<li><a href="/deleteActivity">Delete Exercise</a></li>
+                	<li><a href="/help/">Help</a></li>
                 	<li><a href="/">Log Out</a></li>
                 </li>
            </ul>
@@ -104,59 +104,43 @@
 					</div>
 					<!-- Input Form and Button -->
 					<form action="/addData/">
-
-					<div class="input-group">
-
-						<input name="myName" value="{{name}}" style="display:none;">
-						<input name="activity" value="{{defaultActivity}}" style="display:none;">
-						<input name="category" value="{{defaultCategory}}" style="display:none;">
-						<input name="categories" value="{{categorie}}" style="display:none;">
-
-						<input name="number" type="text" class="form-control" placeholder="Number of Repetitions" required>
-					  <span class="input-group-btn">
-					    <button style="font-family: 'Rubik', sans-serif;" id="graph-button" type="submit" class="btn btn-default">Add Repetitions!</button>
-
-					  </span>
-					</div>
-					</form>
-
-					<form action="/editData/">
-
 						<div class="input-group">
-
 							<input name="myName" value="{{name}}" style="display:none;">
 							<input name="activity" value="{{defaultActivity}}" style="display:none;">
 							<input name="category" value="{{defaultCategory}}" style="display:none;">
 							<input name="categories" value="{{categorie}}" style="display:none;">
-
-
+							<input name="number" type="text" class="form-control" placeholder="Number of Repetitions" required>
+						  <span class="input-group-btn">
+						    <button style="font-family: 'Rubik', sans-serif;" id="graph-button" type="submit" class="btn btn-primary">Add Repetitions!</button>
+						  </span>
 						</div>
-					<div style="height: 170px; overflow: auto;">
-						
-										
-						<table >
-								<tr>
-							  	<th>
-							    <input name="day" type="text" class="form-control" placeholder="Day to Edit" required>
-							    </th>
-							    <th>
-						<input name="edit" type="text" class="form-control" placeholder="Change to?(-1 to Delete)" required>
-								</th>
-								<th>
-									<button style="font-family: 'Rubik', sans-serif;" id="graph-button" type="submit" class="btn btn-default">Edit Repetition</button>
-								</th>
-								</tr>
-						</table>
-						</div>
-					</form>	
+					</form>
 
-					<form action="/deleteActivity/">
-						<div style="margin-top: 15px;">
-		<!-- 					<input name="myName" value="{{name}}" style="display:none;">
+					<form action="/editData/">
+						<div class="input-group">
+							<input name="myName" value="{{name}}" style="display:none;">
 							<input name="activity" value="{{defaultActivity}}" style="display:none;">
 							<input name="category" value="{{defaultCategory}}" style="display:none;">
-							<input name="categories" value="{{categorie}}" style="display:none;"> -->
-
+							<input name="categories" value="{{categorie}}" style="display:none;">
+						</div>
+						<div style="margin-top: 15px; overflow: auto;">			
+							<table >
+									<tr>
+								  	<th>
+								    	<input name="day" type="text" class="form-control" placeholder="Day to Edit" required>
+								    </th>
+								    <th>
+										<input name="edit" type="text" class="form-control" placeholder="Change to?(-1 to Delete)" required>
+									</th>
+									<th>
+										<button style="font-family: 'Rubik', sans-serif;" id="graph-button" type="submit" class="btn btn-danger">Edit Repetition</button>
+									</th>
+									</tr>
+							</table>
+						</div>
+					</form>	
+					<form action="/deleteActivity/">
+						<div style="margin-top: 15px;" class="text-center">
 							<input name="myName" value="{{name}}" style="display:none;">
 							<input name="activity" value="{{defaultActivity}}" style="display:none;">
 							<input name="category" value="{{defaultCategory}}" style="display:none;">
@@ -166,15 +150,11 @@
 						  	</span>
 						</div>
 					</form>
-
 				</div>
 			</div>
 		</div>
 		<a id="array" style="display:none;">{{dataArray}}</a>
 		<a id="labelArray" style="display:none;">{{labelArray}}</a>
-
-
-
 
 		<script src="/javascript/bootstrap.js"></script>
 		<script>
