--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -33,6 +34,7 @@
       <div class="container">
         <label for="cat"><b>Category:</b></label>
         <select name="categ" class="selectpicker" data-width="100%" id="cat">
+          <option value="Chest">Abs</option>
           <option value="Chest">Chest</option>
           <option value="Shoulders">Shoulders</option>
           <option value="Triceps">Triceps</option>
@@ -60,8 +62,6 @@
 
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/javascript/jquery-activity.js"></script>
-  <script src="/javascript/bootstrap.js"></script>
-  <script>function goBack() {window.history.back();}</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/js/bootstrap-select.min.js"></script>
 </body>
 </html>
