fixed motivate to redirect, change UI

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Raleway|Fredoka+One|Oxygen|Lato' rel='stylesheet' type='text/css'>
 </head>
 
-<body style="background-color: #1a1a1a;">
+<body>
 	
 
 <!-- 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -47,7 +47,7 @@
 			<a href="./login" id="tryProduct">Login/Sign Up</a>
 		</nav>
 	</header>
-	<div  background-color: white>
+	<div>
 		<div class="jumbotron">
 			<div class="container">
 				<aside>
