--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,9 +3,15 @@
   	<link rel ="stylesheet" href="/css/style-login.css" type = "text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <link rel ="stylesheet" href="/css/style.css" type = "text/css" />
+
     <script type="text/javascript" src="./javascript/jquery-login.js"></script>
   <body>
-  <h1> Gymtracker</h1>
+  <header>
+    <nav id="navy">
+      <a href="#" id="disabledLogo">Gymtracker</a>
+    </nav>
+  </header>
   <div class="login">
   <h2>Log In Form </h2>
 
@@ -16,12 +22,12 @@
       <p>(can use default id="trung", password="trung")</p>
       <h3 id ="wrong">{{status}}</h3>
 
-      <input id = 'username' type="text" placeholder="Enter Username" name="uname" required>
+      <input type="text" placeholder="Enter Username" name="uname" required>
 
       <label><b>Password</b></label>
-      <input id = 'password' type="password" placeholder="Enter Password" name="psw" required>
+      <input type="password" placeholder="Enter Password" name="psw" required>
 
-      <button type="submit" id='login'>Login</button>
+      <button type="submit">Login</button>
 
       <input type="checkbox" checked="checked"> Remember me
     </div>
