--- a/views/motivate.handlebars
+++ b/views/motivate.handlebars
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
 <!-- 	<link rel ="stylesheet" href="style-login.css" type = "text/css" /> -->
+<meta http-equiv="refresh" content="0; url=./main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{dataArray}}/{{labelArray}}" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/css/bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/motivate-page.css" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.11.2/css/bootstrap-select.min.css">
 <body>
-  <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+  <!-- <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
     <iframe opacity=".5" frameborder="0" height="100%" width="100%" 
       src="https://youtube.com/embed/g-jwWYX7Jlo?autoplay=1&controls=0&showinfo=0&autohide=1&start=5">
     </iframe>
-  </div>
+  </div> -->
         <div class="container">
           <h2>Hi, {{name}}!</h2>
-          <button><a href='./main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{dataArray}}/{{labelArray}}'>Let's start your workout!</a></button>
-        </div>
+          <h1>Loading....</h1>
+       </div>
 </body>
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/javascript/bootstrap.js"></script>
