--- a/public/css/style-main.css
+++ b/public/css/style-main.css
@@ -11,6 +11,32 @@ footer{
 footer p a{
 	text-decoration: none;
 }
-.navbar-collapse.nav.dropdown.activity{
-	background-color: black;
+#navy{
+	font-size: 23px;
+	font-family: 'Lato', sans-serif;
+	padding: 10px 10px 10px 10px;
+	background-color: white;
+	color: black;
+}
+
+header{
+	width: 100%;
+	height: 50px;
+	top:0;
+	left: 0;
+	z-index: 100;
+}
+header a{
+	color: black;
+}
+header nav #helpBtn{
+	color: blue;
+}
+header nav #logoutBtn{
+	color: red;
+}
+header nav .info {
+	float: right;
+	margin-right: 5px;
+	display: inline-block;
 }
