Fixed add activity bug

--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -34,7 +34,7 @@
       <div class="container">
         <label for="cat"><b>Category:</b></label>
         <select name="categ" class="selectpicker" data-width="100%" id="cat">
-          <option value="Chest">Abs</option>
+          <option value="Abs">Abs</option>
           <option value="Chest">Chest</option>
           <option value="Shoulders">Shoulders</option>
           <option value="Triceps">Triceps</option>
