--- a/views/help.handlebars
+++ b/views/help.handlebars
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </div>
-
+        <!--
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </div>
-
+        -->
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -58,7 +58,7 @@
             </div>
             <div class="panel-collapse collapse in">
                 <div class="panel-body">
-                    Simply locate the <q>Edit Repetition</q> button, enter the day that you wish to edit on the left side box, then the number of repetition to change to into the right side box, and then finally press the <q>Edit Repetition</q> button!
+                    Simply locate the <q>Edit Repetition</q> button, enter the day that you wish to edit on the left side box, then the number of repetition to change to into the right side box, and then finally press the <q>Edit Repetition</q> button! You can also click the day on the table to automatically fill in the day you want to edit for the form.
                 </div>
             </div>
         </div>
