--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -82,7 +82,7 @@
   </div>
   		
 
-  		<div class="container" style="margin-top: 40px;">
+  		<div class="container">
 			<div id="main">
 					<div class="text container" style="text-align: center;">
 						<h3 style="font-family: 'Rubik', sans-serif;"><u><b>{{defaultActivity}}</b></u></h3>
