Changed day to dates

--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -102,7 +102,7 @@
 							<table class="table table-striped">
 							  <thead>
 							    <tr>
-							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Day</th>
+							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Dates</th>
 							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Repetitions</th>
 							    </tr>
 							  </thead>
