--- a/views/main2.handlebars
+++ b/views/main2.handlebars
@@ -82,7 +82,7 @@
   </div>
   		
 
-  		<div class="container" style="margin-top: 40px;">
+  		<div class="container">
 			<div id="main">
 					<div class="text container" style="text-align: center;">
 						<h3 style="font-family: 'Rubik', sans-serif;"><u><b>{{defaultActivity}}</b></u></h3>
@@ -102,7 +102,7 @@
 							<table class="table table-striped">
 							  <thead>
 							    <tr>
-							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Day</th>
+							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Dates</th>
 							      <th style="font-family: 'Rubik', sans-serif;" class="col-xs-6">Repetitions</th>
 							    </tr>
 							  </thead>
