--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,12 @@
 	<meta charset="utf-8"/>
 	<title>GymTracker</title>
 	<meta httmp-equiv="X-ua-Compatible" content = "IE=edge">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+	<script src="/jquery/dist/jquery.js"></script>
+
+
+	<script type="text/javascript" src="./javascript/jquery-index.js"></script>
+
 	<meta name = "viewport" content ="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./javascript/blueberry.css" />
 	<link rel ="stylesheet" href="/css/style.css" type = "text/css" />
@@ -44,7 +50,7 @@
 	<header>
 		<nav id="navy">
 			<a href="#" id="disabledLogo">Gymtracker</a>
-			<a href="./login" id="tryProduct">Login/Sign Up</a>
+			<button class="btn btn-success" href="./login" id="login-btn">Login/Sign Up</button>
 		</nav>
 	</header>
 	<div>
@@ -122,7 +128,6 @@
 <!-- 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="./javascript/jquery-code.js"></script>
 
-	<script src="https://code.jquery.com/jquery.js"></script>
 <!-- 	<script src="js/bootstrap.min.js"></script> -->
 
 </body>
