allowing testing for other page

--- a/views/main2.handlebars
+++ b/views/main2.handlebars
@@ -116,6 +116,7 @@
 					<!-- Input Form and Button -->
 					<form action="/addData/">
 						<div class="input-group">
+							<input name="main" value="main2" style="display:none;">
 							<input name="myName" value="{{name}}" style="display:none;">
 							<input name="activity" value="{{defaultActivity}}" style="display:none;">
 							<input name="category" value="{{defaultCategory}}" style="display:none;">
