--- a/views/main2.handlebars
+++ b/views/main2.handlebars
@@ -36,8 +36,9 @@
 		<nav id="navy">
 			<a href="#" id="disabledLogo">Gymtracker</a>
 			<div class="info">
-			<a id='helpBtn' style="font-family: 'Rubik', sans-serif;" href="/help/">Help</a>
             <!-- <a id='logoutBtn' href="/">Log Out</a> -->
+            <button style="font-family: 'Rubik', sans-serif;" onclick="return help();"  class="btn btn-primary">Q & A</button>
+
 			<button style="font-family: 'Rubik', sans-serif;" onclick="return logout();"  class="btn btn-danger">Logout</button>
 
 			</div>
