--- a/views/main2.handlebars
+++ b/views/main2.handlebars
@@ -58,7 +58,7 @@
         <div class="navbar-collapse collapse">
            <ul class="nav navbar-nav">
                 <li class="dropdown">
-                	<li><a class="activity" href="/activity/{{name}}"><strong>Add an Exercise</strong></a></li>
+                	<li><a class="activity" href="/activity2/{{name}}"><strong>Add an Exercise</strong></a></li>
                     {{#each categorie}}
                 	<li>
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{categoryName}}<b class="caret"></b></a>
