--- a/views/activity.handlebars
+++ b/views/activity.handlebars
@@ -8,15 +8,18 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/javascript/activity.js"></script>
+
 <body>
 
 <!-- <div class="container" style="margin-top: 15px;">
   <a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}"></a>
 </div> -->
 
-<div class="container" style="margin-top: 15px;">
-      <a href="/main/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}"><span class="glyphicon glyphicon-chevron-left"></span></a>
+<div id="back" class="container" style="margin-top: 15px;">
+      
 </div>
+<a id="data" style="display:none;">/{{name}}/{{defaultCategory}}/{{defaultActivity}}/{{defaultArray}}/{{labelArray}}</a>
 
 <div class="container">
 
