Made changes to main2, added how this graph works button in main2 but it's not connected

--- a/views/main2.handlebars
+++ b/views/main2.handlebars
@@ -90,7 +90,7 @@
 					</div>
 					<!--This is the chart!-->
 					<canvas id="myChart"></canvas>
-
+					<button style="font-family: 'Rubik', sans-serif;" id="myBtn"  class="btn btn-primary" >How does this graph work?</button>
 				<!-- Table -->
 				<div class="container">
 					<div class="panel panel-default">
