--- a/views/main2.handlebars
+++ b/views/main2.handlebars
@@ -173,6 +173,39 @@
 
 		<script src="/javascript/bootstrap.js"></script>
 		
+
+		<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  	<div class="modal-content">
+    	<span class="close">x</span>
+    	<div class="faqHeader">General questions</div>
+
+        <div class="panel panel-default" >
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    How to see my progression?
+                </h4>
+            </div>
+            <div class="panel-collapse collapse in">
+                <div class="panel-body">
+                	 <img text-align="center" width="70%"src="/img/help1.png"/> 
+                </div>
+            </div>
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    How to add Data?
+                </h4>
+            </div>
+            <div class="panel-collapse collapse in">
+                <div text-align="center"class="panel-body">
+                	<img width="70%"src="/img/help2.png"/> 
+                </div>
+            </div>
+        </div>
+  	</div>
+
+	</div>
 </body>
 <footer id="contact">
 	<div class="wow zoomIn animated" data-wow-delay="0.2s center-block">
