--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -168,6 +168,7 @@
 				</div>
 			</div>
 		</div>
+
 		<a id="array" style="display:none;">{{dataArray}}</a>
 		<a id="labelArray" style="display:none;">{{labelArray}}</a>
 
@@ -204,13 +205,14 @@
             </div>
         </div>
   	</div>
-
 	</div>
 	<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  })
+  (window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-87814015-1', 'auto');
   ga('send', 'pageview');
