--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,35 +37,9 @@
 <body>
 	
 
-<!-- 	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-	    <div class="container">
-	        <div class="navbar-header">
-	            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	                <span class="sr-only">Toggle navigation</span>
-	                <span class="icon-bar"></span>
-	                <span class="icon-bar"></span>
-	                <span class="icon-bar"></span>
-	            </button>
-	            <a class="navbar-brand" href="#">GymTracker</a>        
-	        </div>
-	        <div class="navbar-collapse collapse">
-	            <ul class="nav navbar-nav">
-	                <li class="active"><a href="#">Log In</a></li>
-
-	                 <li><a href="http://ixd.ucsd.edu/home/f16/index.php#calendar">Calendar</a></li>                
-	                <li><a href="http://ixd.ucsd.edu/home/f16/studio.php">Studio</a></li>                
-	                <li><a href="http://ixd.ucsd.edu/home/f16/mobile_app_tips.php">Development Resources</a></li>
-
-	                <!- <li class="dropdown"><a href="http://ixd.ucsd.edu/home/f16/logistics.php" class="dropdown-toggle disabled" data-hover="dropdown">Logistics <b class="caret"></b></a><ul class="dropdown-menu"><li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#prereqs">Prerequisites</a></li><li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#laptop">Equipment</a></li><li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#lab">Lab</a></li><li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#assignments">Assignments</a></li><li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#grading">Grading</a></li><li><a href="http://ixd.ucsd.edu/home/f16/logistics.php#faq">FAQ</a></li></ul></li>                <!-<li><a href="http://ixd.ucsd.edu/app">Submit work</a></li>-->
-	<!--                 
-	            </ul>
-	        </div> -->
-	        <!--/.nav-collapse -->
-<!-- 	    </div>
-	</div> --> 
 	<header>
 		<nav id="navy">
-			<a href="#" id="disabledLogo">Gymtracker</a>
+			<img src="../public/img/logo1.png">
 			<button class="btn btn-success" href="./login" id="login-btn">Login/Sign Up</button>
 		</nav>
 	</header>
@@ -97,8 +71,8 @@
 			</section>
 
 			<section id="infoSection">
-				<img id="section-icon" src="./img/todo-list.jpg">
-			</section>
+<!-- 				<img id="section-icon" src="./img/todo-list.jpg">
+ -->			</section>
 
 		</div>
 	</div>
