--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,10 @@
   <body>
   <header>
     <nav id="navy">
-      <a href="#" id="disabledLogo">Gymtracker</a>
+<!--       <a href="#" id="disabledLogo">Gymtracker</a>
+ -->
+      <img src="../public/img/logo1.png">
+
     </nav>
   </header>
   <div class="login">
