this should fix the logo issue

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -39,7 +39,7 @@
 
 	<header>
 		<nav id="navy">
-			<img src="../public/img/logo1.png">
+			<img src="./img/logo-1.png">
 			<button class="btn btn-success" href="./login" id="login-btn">Login/Sign Up</button>
 		</nav>
 	</header>
