--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
     <nav id="navy">
 <!--       <a href="#" id="disabledLogo">Gymtracker</a>
  -->
-      <img src="../public/img/logo1.png">
+      <img src="./img/logo-1.png">
 
     </nav>
   </header>
