--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -50,7 +50,9 @@
 </head>
 <header>
 		<nav id="navy">
-			<a  id="disabledLogo">Gymtracker</a>
+			<!-- <a  id="disabledLogo">Gymtracker</a> -->
+			<img src="./img/logo-1.png">
+
 			<div class="info">
             <!-- <a id='logoutBtn' href="/">Log Out</a> -->
             <button style="font-family: 'Rubik', sans-serif;" onclick="return help();"  class="btn btn-primary">Q & A</button>
