Added logo to main2

--- a/views/main2.handlebars
+++ b/views/main2.handlebars
@@ -35,7 +35,7 @@
 </head>
 <header>
 		<nav id="navy">
-			<a href="#" id="disabledLogo">Gymtracker</a>
+			<img src="./img/logo-1.png">
 			<div class="info">
             <!-- <a id='logoutBtn' href="/">Log Out</a> -->
             <button style="font-family: 'Rubik', sans-serif;" onclick="return help();"  class="btn btn-primary">Q & A</button>
