--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -37,7 +37,7 @@
 <header>
 		<nav id="navy">
 			<!-- <a  id="disabledLogo">Gymtracker</a> -->
-			<img src="./img/logo-1.png">
+			<img src="/img/logo-1.png">
 
 			<div class="info">
             <!-- <a id='logoutBtn' href="/">Log Out</a> -->
