--- a/public/css/style-login.css
+++ b/public/css/style-login.css
@@ -5,11 +5,14 @@ form {
 h1{
     color: red;
 }
+.form{
+    margin-top: 70px;
+}
 
 input[type=text], input[type=password] {
     width: 40%;
     padding: 12px 20px;
-    margin: 20px 0;
+    margin: 25px 0;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
