--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="./javascript/jquery-login.js"></script>
   <body>
   <header>
+
     <nav id="navy">
 <!--       <a href="#" id="disabledLogo">Gymtracker</a>
  -->
@@ -17,12 +18,13 @@
     </nav>
   </header>
   <div class="login">
+
   <h2>Log In Form </h2>
 
-    <div class="container">
+    <div class="form container">
   <form action="./validation" method="get">
       <h3 id ="wrong">{{status}}</h3>
-      <h5>(can use default id="trung", password="trung")</h5>
+      <!-- <h5>(can use default id="trung", password="trung")</h5> -->
 
       <label><b>Username</b></label>
      
@@ -52,7 +54,7 @@
 
   <h2>Sign Up Form</h2>
 
-    <div class="container">
+    <div class="form container">
       <h3 id ="notice">Account created successfully! </br> Login with your account</h3>
       <div class="createAccount">
       <label><b>Choose a user name:</b></label>
