--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -94,7 +94,7 @@
 					</div>
 					<!--This is the chart!-->
 					<canvas id="myChart"></canvas>
-				<button style="font-family: 'Rubik', sans-serif;" id="myBtn"  class="btn btn-primary" >How does this graph work?</button>
+				<button style="font-family: 'Rubik', sans-serif; margin-left: 15px;" id="myBtn"  class="btn btn-primary" >How does this graph work?</button>
 				<!-- Table -->
 				<div class="container">
 					<div class="panel panel-default">
