Added img again

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,8 +58,8 @@
 			</section>
 
 			<section id="infoSection">
-<!-- 				<img id="section-icon" src="./img/todo-list.jpg">
- -->			</section>
+				<img id="section-icon" src="./img/todo-list.jpg">
+			</section>
 
 		</div>
 	</div>
